    Bug fixed: get_cookie() typo should have been self.get_cookie().
    Thanks Greg Baker (Real#0312)
    
    Bug fixed: Javascript autorefresh didn't work with URLs ending in
    'index_html'. Thanks Maheshg Real#0298
    
    Bug fixed: Odd emails with ISO-8859 encoding that aren't really
    ISO-8859 encoded could cause a TypeError. Thanks Mirco Attocchi
    Real#0300.
    
    Bug fixed: POP3 email parsing could fail if email didn't have a
    message-id.
    
    New feature: "Select all" button on the Spam protection page.

    Bug fixed: Bug in saving of spam keywords on duplicate keywords
    across combinations fixed.
    
    Bug fixed: Not possible to change an issues Confidential status
    through the "change details" form even if Confidential option was
    enabled. Real#0281
    
- 0.7.2

    Bug fixed: Nasty bug in name/email gets blanked on issue
    submission even the issuetracker remembers the users name as part
    of the instance persistency. Thanks Rakesh, Ramy, Pradeep Real#0268
    
    Bug fixed: getPreviewTitle() on followups could get potentially
    confused if you tried to put on hold.
    
    New feature: Spam protection built in. Click Management tab, Spam
    protection to configure the spam keywords. Only applicable to
    public issuetrackers really.
    
    Bug fixed: ACL accounts where the username == full name couldn't
    be sent to in the Always notify property. Thanks Ed Leafe Real#0266
    
    Bug fixed: ValueError in pop3 checking with mismatched case in the
    subjectline. Thanks Eric Real#0265
    
    New feature: Ability to control wether to reveal the new issue URL
    of issues created via inbound email. Instead of the issue's URL it
    shows the ID like #0001. (Thanks Bob Gimlich Real#0263)
    
    Bug fixed: Emailed in issues with signature had incorrect
    linebreaks in HTML looking like this: <br\s*/>
    
    New feature: The URL option on Add Issue is now by default