@@ -206,7 +206,7 @@ class IssueTrackerIssue(IssueTracker):
                     return issueuserobj.getFullname() or self.fromname
             elif CMF_getToolByName and hasattr(uf, 'portal_membership'):
                 mtool = CMF_getToolByName(self, 'portal_membership')
-                authenticated_member = mtool.getAuthenticatedMember()
+                authenticated_member = mtool.getMemberById(name)
                 if authenticated_member.getProperty('fullname'):
                     return authenticated_member.getProperty('fullname')
             
@@ -232,7 +232,7 @@ class IssueTrackerIssue(IssueTracker):
                     return issueuserobj.getEmail() or self.email
             elif CMF_getToolByName and hasattr(uf, 'portal_membership'):
                 mtool = CMF_getToolByName(self, 'portal_membership')
-                authenticated_member = mtool.getAuthenticatedMember()
+                authenticated_member = mtool.getMemberById(name)
                 if authenticated_member.getProperty('email'):
                     return authenticated_member.getProperty('email')
                 
